# exogame_elixir

./: .env.example  README.md  config_auto_pull.json  config_deploy_site.json  docker-compose.yml  package-lock.json  package.json  references.json  start.sh  test_integration.mjs
.metals/: metals.lock.db  metals.mv.db
article_tex/: -home-jezuis-Desktop-std-sites-node-nest-exogame-article_tex-.txt  abntex2-modelo-include-comandos.aux  abntex2-modelo-references.bib  abntex2-modelo-trabalho-academico.aux  abntex2-modelo-trabalho-academico.bbl  abntex2-modelo-trabalho-academico.blg  abntex2-modelo-trabalho-academico.brf  abntex2-modelo-trabalho-academico.fdb_latexmk  abntex2-modelo-trabalho-academico.fls  abntex2-modelo-trabalho-academico.idx  abntex2-modelo-trabalho-academico.ilg  abntex2-modelo-trabalho-academico.ind  abntex2-modelo-trabalho-academico.lof  abntex2-modelo-trabalho-academico.loq  abntex2-modelo-trabalho-academico.lot  abntex2-modelo-trabalho-academico.toc  exogame-references.bib  exogame-tcc.aux  exogame-tcc.bbl  exogame-tcc.blg  exogame-tcc.brf  exogame-tcc.fdb_latexmk  exogame-tcc.fls  exogame-tcc.ilg  exogame-tcc.lof  exogame-tcc.loq  exogame-tcc.lot  exogame-tcc.tex  exogame-tcc.toc
article_tex/oficial/: exogame-references.bib  exogame.blg  exogame.tex  (+1 more)
backend_elixir/: .dockerignore  Dockerfile  README.md  mix.exs
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  references.json
test_back_ends/: docker-compose.yml  run_benchmarks.sh
test_back_ends/rust_actix/: Cargo.toml  Dockerfile
test_back_ends/rust_actix/src/: main.rs
(+119 files in other folders)
