[package]
name = "bench-actix"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-ws = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.14"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
futures-util = "0.3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
